--- a/HaskellDebugger.cabal
+++ b/HaskellDebugger.cabal
@@ -14,7 +14,7 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 executable HaskellDebugger
-    -- main-is:          
+    main-is:            Main.hs
     hs-source-dirs:     src   
     -- other-modules:       
     build-depends:      base,
