Array dependency has been added, some renames performed to avoid names shadowing

--- a/HaskellDebugger.cabal
+++ b/HaskellDebugger.cabal
@@ -19,4 +19,5 @@ executable HaskellDebugger
     -- other-modules:       
     build-depends:      base,
                         ghc,
-                        ghc-paths
+                        ghc-paths,
+                        array
