Added command line argument parser; Implemented setting of debug output

--- a/HaskellDebugger.cabal
+++ b/HaskellDebugger.cabal
@@ -20,4 +20,5 @@ executable HaskellDebugger
     build-depends:      base,
                         ghc,
                         ghc-paths,
-                        array
+                        array,
+                        network
