All commands output information in JSON now

--- a/HaskellDebugger.cabal
+++ b/HaskellDebugger.cabal
@@ -21,4 +21,5 @@ executable HaskellDebugger
                         ghc,
                         ghc-paths,
                         array,
-                        network
+                        network,
+                        json
