--- a/HaskellDebugger.cabal
+++ b/HaskellDebugger.cabal
@@ -23,3 +23,4 @@ executable HaskellDebugger
                         array,
                         network,
                         json
+    C-Sources:          src/c_src/DebugLibrary.cpp
